Allow public department lookup for new-user signup